Linked heroku with add more design

--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 NODEMAILER_EMAIL=kashishbehl36@gmail.com
 NODEMAILER_PASS=jtjggbrmcpwxbdif
 NODE_ENV=development
+HEROKU_APP_EMAIL=addmoredesign.studio@gmail.com
+HEROKU_APP_PASSWORD=nbhbhgh123#
