--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-NODEMAILER_EMAIL=kashishbehl36@gmail.com
-NODEMAILER_PASS=jtjggbrmcpwxbdif
+NODEMAILER_EMAIL=addmoredesign.studio@gmail.com
+NODEMAILER_PASS=mrcmfjbhvarirlpi
 NODE_ENV=development
 HEROKU_APP_EMAIL=addmoredesign.studio@gmail.com
 HEROKU_APP_PASSWORD=nbhbhgh123#
-PORT=8080
+PORT=3000
